Using Path.of() instead of Paths.get() in Main