@@ -6,7 +6,7 @@ import game.results.GameResultManager;
 import game.results.JsonGameResultManager;
 
 import java.io.IOException;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.time.Duration;
 import java.time.ZonedDateTime;
 import java.util.Locale;
@@ -26,7 +26,7 @@ public class Main {
     }
 
     public static void main(String[] args) throws IOException {
-        GameResultManager manager = new JsonGameResultManager(Paths.get("results.json"));
+        GameResultManager manager = new JsonGameResultManager(Path.of("results.json"));
         for (var i = 0; i < 100; i++) {
             manager.add(createGameResult());
         }
